fix(samanta): enhance test configuration in build.sbt for improved memory management and dependency updates